# visualize-finances

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cicd.yml
src/visfin/: main.py  main_page.py  utils.py  wallets.py
src/visfin/configs/: columns.py  wallets.py
tests/utils/: test_concatenate_csv_files.py
tests/wallets/: conftest.py  test_Wallets.py
