[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visfin"
authors = [
    {name = "Tomer Gabay", email = "tomergabay001@gmail.com"},
]
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = ["pandas==2.0.*", "loguru==0.7.*", "streamlit==1.25.*", "plotly==5.15.*", "statsmodels==0.14.*"]
dynamic= ["version"]

[project.optional-dependencies]
dev = [
    "pre-commit==3.3.*",
    "pytest==7.4.*",
    "ipykernel==6.25.*",
    "nbformat==5.9.*",
]

[tools.setuptools.dynamic]
version = {attr = "visfin.__version__"}

[tool.isort]
profile = "black"
known_first_party = ["visfin"] 
known_third_party = ["loguru", "pandas", "pytest", "streamlit"]


[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''